...
"Bots" = "Bots";
"Chat Settings" = "Chat Settings";
"Notification" = "Notification";
"Blocked User" = "Blocked User";
"Change Language" = "Change Language";
"Games" = "Games";
"Logout" = "Logout";
"This feature has not been added yet" = "This feature has not been added yet";
"Are you sure you want to Logout?" = "Are you sure you want to Logout?";
"Fail to logout at this moment." = "Fail to logout at this moment.";

// ------- More Settings Localization end-------//

...
